<resources>
    <string name="app_name">VetPet</string>

    <string name="field_email">Email</string>
    <string name="field_password">Пароль</string>
    <string name="field_repeat_password">Повторіть пароль</string>


    <!-- Spinner on MainFragment -->
    <string-array name="find_category_items">
        <item>Оберіть критерій пошуку</item>
        <item>Записатися до лікаря</item>
        <item>Знайти клініку</item>
    </string-array>

    <!--Type of pets on AddPetFragment -->
    <string-array name="pets_type_array">
        <item>Оберіть</item>
        <item>Кіт</item>
        <item>Пес</item>
        <item>Папуга</item>
    </string-array>

    <!--Age pets on AddPetFragment -->
    <string-array name="numbers_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <!-- Top bar -->
    <string name="location_city">Ваше місто</string>
    <string name="map_point">map point</string>
    <string name="cart">cart</string>


    <!-- Bottom bar -->
    <string name="find_bottom_bar">Пошук</string>
    <string name="account_bottom_bar">Кабінет</string>
    <string name="info_bottom_bar">Довідка</string>

    <!-- Find block -->
    <string name="main_title">Знайдіть лікаря, клініку для свого улюбленця</string>
    <string name="find_by_surname">Знайти лікаря за прізвищем</string>
    <string name="find_by_pet">Оберіть для кого потрібен лікар</string>
    <string name="or">Або</string>
    <string name="input_surname"><font size="14">Введіть прізвище</font></string>
    <string name="find_button">Знайти</string>

    <!-- Titles -->
    <string name="auth">Авторизація</string>
    <string name="register">Зареєструватися</string>


    <!-- AuthFragment -->
    <string name="login">Логін</string>
    <string name="password">Пароль</string>


    <string name="vet_clinics">Ветеринарні клініки</string>
    <string name="vet_clinics_desc">Знайдіть ветеринарну клініку зі зручним розташуванням</string>
    <string name="pets_help_title">Допомога безпритульним тваринам</string>
    <string name="pets_help_desc">Зробіть добру справу.</string>


    <string name="input_login">Введіть логін/e-mail</string>
    <string name="input_pass">Введіть пароль</string>

    <string name="text_view_your_city">Введіть ваше місто</string>
    <string name="input_city">Введіть назву міста</string>
    <string name="full_name">Прізвище та ім\'я</string>
    <string name="number">Номер телефону</string>
    <string name="ua_number_code">+38</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_login">Логін: </string>
    <string name="user_full_name">Ім\'я користувача</string>
    <string name="name">Ім\'я</string>
    <string name="name_nickname">Ім\'я/нікнейм</string>
    <string name="surname">Прізвище</string>
    <string name="phone">Телефон</string>
    <string name="choose">Оберіть</string>

    <string name="fill_the_field">Заповніть поле</string>
    <string name="age">"Вік "</string>
    <string name="breed">Порода</string>
    <string name="age_with_colon">Вік:</string>
    <string name="breed_with_colon">Порода:</string>
    <string name="add">Додати</string>
    <string name="add_pet">Додати улюбленця</string>
    <string name="pet_not_founded">Улюбленців не знайдено</string>
    <string name="type">Вид: </string>
    <string name="delete">Видалити</string>
    <string name="edit_info_label">Редагувати інформацію про улюбленця</string>
    <string name="edit">Змінити</string>
    <string name="acc_edit_info_label">Редагувати інформацію про користувача</string>
    <string name="input_search">Введіть запит</string>
    <string name="vet_not_founded">Ветеринарів з таким ім\'ям не знайдено</string>
    <string name="clinics_not_founded">Клінік з таким ім\'ям не знайдено</string>
    <string name="test">Test</string>
    <string name="find_result">Результати пошуку</string>
    <string name="about_program">Про програму</string>
    <string name="authentication">Авторизуватися</string>
    <string name="description_for_clinics">Якщо ви представник клініки та хочете співпрацювати, пропонуємо вам зареєструватися або авторизуватися в нашому додатку.</string>
    <string name="for_clinics">Для клінік</string>
    <string name="about_program_description">Ця програма створена для в рамках дипломного проєкту студентом ХНУРЕ</string>
    <string name="creator">Розробник: Ємець Денис</string>
    <string name="version">Версія: 1.0</string>
    <string name="register_clinic">Зареєструвати клініку</string>
    <string name="clinic_name">Назва клініки</string>
    <string name="clinic_address">Адреса клініки</string>
    <string name="auth_clinic">Авторизувати клініку</string>
    <string name="list_of_employee">Список працівників</string>
    <string name="add_employee">Додати робітника</string>

</resources>